--- a/simplestreaming/src/main/resources/pubsub.yml
+++ b/simplestreaming/src/main/resources/pubsub.yml
@@ -4,5 +4,5 @@
 
 # raw message from crawlers
 twPubsubSubscription: twitter_messages_subscription
-blogPubsubSubscription: blog_messages_subscription
+rssPubsubSubscription: blog_messages_subscription
 
