--- a/twitter-crawler/build.gradle
+++ b/twitter-crawler/build.gradle
@@ -128,61 +128,45 @@ spotless {
 
 dependencies {
     compile group: 'com.beust', name: 'jcommander', version: '1.72'
-    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.2'
-    compile group: 'org.json', name: 'json', version: '20180130'
-    compile group: "org.apache.beam", name: "beam-sdks-java-core", version: "${beamVersion}"
-    compile group: "org.apache.beam", name: "beam-sdks-java-io-google-cloud-platform", version: "${beamVersion}"
-    compile group: "org.apache.beam", name: "beam-runners-google-cloud-dataflow-java", version: "${beamVersion}"
-    compile group: "org.apache.beam", name: "beam-runners-direct-java", version: "${beamVersion}"
-    
-    // Forces google api clients version to be 1.22.0 due to the below issue with Beam 2.4.0
-    // https://github.com/google/google-api-java-client/issues/1073
-    compile(group: "com.google.api-client", name: "google-api-client", version: "1.22.0") {
-        exclude(module: "guava-jdk5")
-        force = true
-    }
-    compile(group: "com.google.apis", name: "google-api-services-bigquery", version: "v2-rev387-1.22.0") {
-        exclude(module: "guava-jdk5")
-        force = true
-    }
-    compile(group: "com.google.http-client", name: "google-http-client", version: "1.22.0") {
-        exclude(module: "guava-jdk5")
-        force = true
-    }
-    compile(group: "com.google.apis", name: "google-api-services-pubsub", version: "v1-rev385-1.22.0") {
-        exclude(module: "guava-jdk5")
-        force = true
-    }
-    compile group: "com.google.cloud", name: "google-cloud-pubsub", version: "0.46.0-beta"
-
-    compile group: "joda-time", name: "joda-time", version: "2.9.4"
-    compile(group: "com.google.guava", name: "guava", version: "22.0") {
-        force = true
-    }
-    compile group: "org.slf4j", name: "slf4j-api", version: "1.7.21"
-    runtime group: "org.slf4j", name: "slf4j-jdk14", version: "1.7.14"
-    compile group: "org.hamcrest", name: "hamcrest-all", version: "1.3"
-    compile group: "junit", name: "junit", version: "4.12"
-    compile group: "redis.clients", name: "jedis", version: "2.9.0"
-
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
-    compile group: 'org.apache.commons', name: 'commons-text', version: '1.3'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.6.2'
-    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.6.0'
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
-    compile group: 'io.fastjson', name: 'boon', version: '0.34'
-    compile group: 'org.elasticsearch.client', name: 'rest', version: '5.5.3'
-
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.9.0'
+    compile group: 'com.google.cloud', name: 'google-cloud-pubsub', version: '1.35.0'
+    compile group: 'com.google.cloud', name: 'google-cloud-monitoring', version: '1.35.0'
     // Code gen, annotations
     compileOnly group: 'com.google.auto.value', name: 'auto-value', version: '1.5'
     apt group: 'com.google.auto.value', name: 'auto-value', version: '1.5'
+    compile group: 'org.codehaus.mojo', name: 'findbugs-maven-plugin', version: '3.0.4'
+    // Common
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
+    compile group: 'org.apache.commons', name: 'commons-text', version: '1.3'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.6.2'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.2'
+    compile group: 'com.google.http-client', name: 'google-http-client', version: '1.23.0'
+    compile group: 'com.fiftyonred', name: 'mock-jedis',  version:'0.4.0'
+    compile group: 'org.elasticsearch.client', name: 'rest', version: '5.5.3'
 
-    compileOnly group: "com.google.code.findbugs", name: "annotations", version: "3.0.1"
-    compileOnly group: "com.google.code.findbugs", name: "jsr305", version: "3.0.1"
+    // Scheduling
+    compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
+    compile group: 'org.quartz-scheduler', name: 'quartz-jobs', version: '2.3.0'
 
+    compile("org.elasticsearch.client:elasticsearch-rest-high-level-client:6.3.2") {
+        exclude group: "org.apache.logging.log4j"
+        force = true
+    }
+
+    // Test
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
+    testCompile group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
+    
     testCompile group: "org.powermock", name: "powermock-mockito-release-full", version: "1.6.4"
     testCompile group: "io.grpc", name: "grpc-testing", version: "${grpcVersion}"
     testCompile group: "com.fiftyonred", name: "mock-jedis", version: "0.4.0"
